--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -101,10 +101,12 @@
     display: none;
     fill: $accent-color;
     margin-right: 7px;
+    flex-shrink: 0;
   }
 
   &--checkbox {
     margin-right: 7px;
+    flex-shrink: 0;
   }
 }
 
