--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,12 +5,12 @@
     border-bottom: 1px solid $border-bottom-color;
   }
   @media screen and (min-width: 480px) {
-    min-width: 480px;
+    max-width: 480px;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
