--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,8 +2,11 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $main-background-color;
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1199px) {
     text-align: center;
+  }
+  @media screen and (min-width: 1200px) {
+    text-align: left;
   }
 }
 
