--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,6 +24,7 @@
   top: 50%;
   left: 50%;
   padding: 40px;
+  width: 95%;
   background-color: $main-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
