--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
   @include flex(flex, center, space-between);
   min-height: 60px;
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     & {
       @include flex(flex, center, center);
     }
@@ -40,16 +40,21 @@
 .navigation__toggle.is-open .icon-menu {
   display: none;
 }
+
 .navigation__container {
-  display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0%;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: $main-white-color;
   padding: 48px 40px;
+  transform: translateX(100%);
+  transition: transform 250ms $timing-function;
   &.is-open {
-    display: block;
+    transform: translateX(0);
     z-index: 999;
   }
   @media screen and (min-width: 767px) {
