--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,11 +1,12 @@
-@mixin flex ($flex, $ai, $jc: normal) {
+@mixin flex($flex, $ai, $jc: normal) {
   display: $flex;
   align-items: $ai;
   justify-content: $jc;
 }
 
-@mixin link-shadow () {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+@mixin link-shadow() {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 @mixin border($color) {
@@ -25,12 +26,12 @@
   outline: 1px solid $color;
 }
 
-@mixin button($width: 200px) {
+@mixin button($width: 200px, $height: 50px) {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   width: $width;
-  height: 50px;
+  height: $height;
   padding: 0;
   background-color: $accent-color;
   color: $main-white-color;
@@ -41,7 +42,8 @@
   cursor: pointer;
   border-radius: 4px;
   border: none;
-  transition: box-shadow 250ms $timing-function, color 250ms $timing-function, background-color 250ms $timing-function;
+  transition: box-shadow 250ms $timing-function, color 250ms $timing-function,
+    background-color 250ms $timing-function;
 
   &:hover,
   &:focus {
