--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ ul {
 .header {
   position: relative;
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .header__container {
     display: flex;
     align-items: center;
@@ -54,17 +54,17 @@ ul {
 .container--bb {
   border-bottom: 1px solid #ECECEC;
 }
-@media screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
   .container {
     max-width: 480px;
   }
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
   }
@@ -76,7 +76,7 @@ ul {
   justify-content: space-between;
   min-height: 60px;
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .navigation {
     display: flex;
     align-items: center;
@@ -97,12 +97,12 @@ ul {
   outline: none;
   z-index: 1000;
 }
-
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .navigation__toggle {
     display: none;
   }
 }
+
 .navigation__toggle .icon-cross {
   display: none;
 }
@@ -132,7 +132,7 @@ ul {
   transform: translateX(0);
   z-index: 999;
 }
-@media screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
   .navigation__container {
     display: none;
   }
@@ -142,7 +142,7 @@ ul {
   fill: #2196F3;
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .network {
     display: flex;
     flex-wrap: wrap;
@@ -151,7 +151,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .network__item {
     position: relative;
   }
@@ -167,7 +167,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .network__link {
     color: #2196F3;
     font-weight: 500;
@@ -198,7 +198,7 @@ ul {
 .site-nav {
   display: block;
 }
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .site-nav {
     margin-bottom: auto;
   }
@@ -206,7 +206,7 @@ ul {
     display: none;
   }
 }
-@media screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
   .site-nav {
     display: flex;
     align-items: center;
@@ -216,7 +216,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .site-nav__item:not(:last-child) {
     margin-bottom: 36px;
   }
@@ -231,7 +231,7 @@ ul {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
   .site-nav__link {
     position: relative;
     display: inline-flex;
@@ -250,7 +250,7 @@ ul {
 .site-nav__link--current {
   color: #2196F3;
 }
-@media screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
   .site-nav__link--current::after {
     content: "";
     position: absolute;
@@ -266,12 +266,12 @@ ul {
 .out-nav {
   display: block;
 }
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .out-nav.tablet {
     display: none;
   }
 }
-@media screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
   .out-nav {
     display: flex;
     align-items: flex-start;
@@ -281,7 +281,7 @@ ul {
     flex-direction: column;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .out-nav {
     display: flex;
     align-items: center;
@@ -291,7 +291,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .out-nav__item:not(:last-child) {
     margin-bottom: 32px;
   }
@@ -305,12 +305,7 @@ ul {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 480px) {
-  .out-nav__link {
-    font-size: 34px;
-  }
-}
-@media screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
   .out-nav__link {
     display: flex;
     align-items: center;
@@ -320,7 +315,7 @@ ul {
     line-height: 1.1666666667;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .out-nav__link {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -332,7 +327,7 @@ ul {
   fill: #2196F3;
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .out-nav__link.mail {
     color: #757575;
     font-size: 24px;
@@ -340,12 +335,12 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .out-nav__icon {
     display: none;
   }
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .out-nav__icon {
     margin-right: 10px;
     fill: currentColor;
@@ -359,7 +354,7 @@ ul {
     height: 14px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .out-nav__icon--mail {
     width: 16px;
     height: 12px;
@@ -396,7 +391,7 @@ ul {
   color: #FFFFFF;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .hero__btn {
     display: inline-flex;
     justify-content: center;
@@ -446,7 +441,7 @@ ul {
   color: #FFFFFF;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .form-signup__btn {
     margin-left: 12px;
   }
@@ -479,7 +474,7 @@ ul {
   color: #FFFFFF;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 479px) {
   .modal-form__btn {
     display: inline-flex;
     justify-content: center;
@@ -552,18 +547,18 @@ ul {
   column-gap: 8px;
   row-gap: 15px;
 }
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .buttons-list {
     max-width: 326px;
   }
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .buttons-list {
     justify-content: center;
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .buttons-list {
     margin-bottom: 50px;
   }
@@ -575,7 +570,7 @@ ul {
   text-align: center;
   background-color: #2F303A;
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -629,7 +624,7 @@ ul {
   margin-bottom: 30px;
   color: #FFFFFF;
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .hero__title {
     max-width: 696px;
     font-size: 44px;
@@ -644,18 +639,18 @@ ul {
 .section--grey {
   background-color: #F5F4FA;
 }
-@media screen and (max-width: 1199px) {
+@media only screen and (max-width: 1199px) {
   .section--desktop {
     display: none;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .section--no-pb {
     padding-bottom: 0;
   }
@@ -681,14 +676,14 @@ ul {
   clip-path: inset(50%);
   margin: -1px;
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .section__title {
     margin-bottom: 50px;
     font-size: 36px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .features-list {
     display: flex;
     gap: 30px;
@@ -696,18 +691,18 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .features-list__item {
     width: calc((100% - 60px) / 2);
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .features-list__item {
     width: 270px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .features-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -739,7 +734,7 @@ ul {
   line-height: 1.14;
   text-transform: uppercase;
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .features-list__title {
     text-align: left;
   }
@@ -780,7 +775,7 @@ ul {
   font-size: 16px;
   line-height: 1.18;
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .workers-list {
     display: flex;
     flex-wrap: wrap;
@@ -798,18 +793,18 @@ ul {
   border-radius: 0px 0px 4px 4px;
   background-color: #FFFFFF;
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .workers-list__item {
     width: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .workers-list__item {
     width: 270px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .workers-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -833,7 +828,7 @@ ul {
   gap: 10px;
   padding-bottom: 24px;
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .workers-social {
     padding-bottom: 30px;
   }
@@ -871,17 +866,17 @@ ul {
 .clients__item {
   height: 92px;
 }
-@media screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
   .clients__item {
     width: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .clients__item {
     width: calc((100% - 60px) / 3);
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .clients__item {
     width: 170px;
   }
@@ -909,12 +904,12 @@ ul {
   gap: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .works-list__item {
     width: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .works-list__item {
     width: calc((100% - 60px) / 3);
   }
@@ -962,17 +957,17 @@ ul {
   line-height: 1.55;
   padding: 0 24px;
 }
-@media screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
   .works-list__text {
     font-size: 18px;
   }
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .works-list__text {
     padding: 48px 24px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .works-list__text {
     padding: 63px 24px;
   }
@@ -1006,12 +1001,12 @@ ul {
   padding-bottom: 60px;
   background-color: #2F303A;
 }
-@media screen and (max-width: 1199px) {
+@media only screen and (max-width: 1199px) {
   .page-footer {
     text-align: center;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .page-footer {
     text-align: left;
   }
@@ -1022,7 +1017,7 @@ ul {
   flex-direction: column;
   gap: 60px;
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .wrapper {
     flex-direction: row;
     flex-wrap: wrap;
@@ -1030,7 +1025,7 @@ ul {
     justify-content: center;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .wrapper {
     gap: 0;
     flex-wrap: nowrap;
@@ -1067,7 +1062,7 @@ ul {
   color: rgba(255, 255, 255, 0.6);
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .page-footer__social {
     margin-left: 70px;
   }
@@ -1106,20 +1101,20 @@ ul {
     width: 450px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .page-footer__form {
     margin-left: auto;
     width: 560px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .form-signup {
     display: flex;
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media only screen and (max-width: 1199px) {
   .form-signup__label {
     display: block;
     margin-bottom: 20px;
@@ -1141,7 +1136,7 @@ ul {
   border-radius: 4px;
   background-color: transparent;
 }
-@media screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .form-signup__input {
     width: 358px;
   }
@@ -1188,14 +1183,14 @@ ul {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
   .modal {
     max-width: 450px;
     width: 100%;
     min-height: 609px;
   }
 }
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .modal {
     max-width: 528px;
     min-height: 581px;
@@ -1320,7 +1315,7 @@ ul {
   overflow: hidden;
   clip: rect(0 0 0 0);
 }
-.modal-form__input--checkbox:checked ~ .modal-form__label--checkbox .modal-form__icon--checkbox {
+.modal-form__input--checkbox:checked ~ .modal-form__label--checkbox .modal-form__icon--check {
   display: none;
 }
 .modal-form__input--checkbox:checked ~ .modal-form__label--checkbox .modal-form__icon--checked {
@@ -1341,15 +1336,13 @@ ul {
 .modal-form__input:hover + .modal-form__icon, .modal-form__input:focus + .modal-form__icon {
   fill: #2196F3;
 }
-.modal-form__icon--checked {
-  display: none;
-  fill: #2196F3;
-  margin-right: 7px;
-  flex-shrink: 0;
-}
 .modal-form__icon--checkbox {
   margin-right: 7px;
   flex-shrink: 0;
+}
+.modal-form__icon--checked {
+  display: none;
+  fill: #2196F3;
 }
 
 .modal-form__textarea {
