--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,13 +4,13 @@
   &--bb {
     border-bottom: 1px solid $border-bottom-color;
   }
-  @media screen and (min-width: 480px) {
+  @include mq('phone') {
     max-width: 480px;
   }
-  @media screen and (min-width: 768px) {
+  @include mq('tablet') {
     max-width: 768px;
   }
-  @media screen and (min-width: 1200px) {
+  @include mq('desktop') {
     max-width: 1200px;
   }
 }
