--- a/sass/components/_footer-social.scss
+++ b/sass/components/_footer-social.scss
@@ -1,5 +1,5 @@
 .page-footer__social {
-  @media screen and (min-width: 768px) {
+  @include mq('tablet') {
     margin-left: 70px;
   }
 }
@@ -15,14 +15,14 @@
   @include size(44px, 44px);
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms $timing-function;  
+  transition: background-color 250ms $timing-function;
   &:hover,
   &:focus {
     background-color: $accent-color;
   }
 }
 
-.social-list__icon{
+.social-list__icon {
   @include size(20px, 20px);
   fill: $main-white-color;
 }
