--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   &__container {
-    @media screen and (min-width: 768px) {
+    @include mq('tablet') {
       @include flex(flex, center, center);
     }
   }
