--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,11 +3,11 @@
   padding-bottom: 118px;
   text-align: center;
   background-color: $main-background-color;
-
-  @media screen and (min-width: 1200px) {
+  @include mq('desktop') {
     padding-top: 200px;
     padding-bottom: 200px;
   }
+
   &--overlay {
     max-width: 1600px;
     margin-left: auto;
@@ -69,7 +69,7 @@
   margin-bottom: 30px;
   color: $main-white-color;
 
-  @media screen and (min-width: 1200px) {
+  @include mq('desktop') {
     max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
