--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,12 +32,12 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms $timing-function;
-  @media screen and (min-width: 480px) {
+  @include mq('phone') {
     max-width: 450px;
     width: 100%;
     min-height: 609px;
   }
-  @media screen and (min-width: 768px) {
+  @include mq('tablet') {
     max-width: 528px;
     min-height: 581px;
   }
