--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
   @include flex(flex, center, space-between);
   min-height: 60px;
-  @media screen and (min-width: 768px) {
+  @include mq('tablet') {
     & {
       @include flex(flex, center, center);
     }
@@ -21,10 +21,7 @@
   border-radius: 50%;
   outline: none;
   z-index: 1000;
-}
-
-@media (min-width: 768px) {
-  .navigation__toggle {
+  @include mq('tablet') {
     display: none;
   }
 }
@@ -57,7 +54,7 @@
     transform: translateX(0);
     z-index: 999;
   }
-  @media screen and (min-width: 767px) {
+  @include mq('tablet') {
     display: none;
   }
 }
