--- a/sass/components/_out-nav.scss
+++ b/sass/components/_out-nav.scss
@@ -1,17 +1,17 @@
 .out-nav {
   display: block;
-  @media screen and (max-width: 767px) {
+  @include mq('tablet', max) {
     &.tablet {
       display: none;
     }
   }
-  @media screen and (min-width: 767px) {
+  @include mq('tablet') {
     @include flex(flex, flex-start, center);
     margin-left: auto;
     gap: 10px;
     flex-direction: column;
   }
-  @media screen and (min-width: 1200px) {
+  @include mq('desktop') {
     @include flex(flex, center, center);
     flex-direction: row;
     gap: 50px;
@@ -19,7 +19,7 @@
 }
 
 .out-nav__item:not(:last-child) {
-  @media screen and (max-width: 767px) {
+  @include mq('tablet', max) {
     margin-bottom: 32px;
   }
 }
@@ -31,18 +31,16 @@
   color: $accent-color;
   letter-spacing: 0.02em;
   transition: color 250ms $timing-function;
-  @media screen and (min-width: 480px) {
+  @include mq('mobile') {
     font-size: 34px;
   }
-  @media screen and (min-width: 767px) {
+  @include mq('tablet') {
     @include flex(flex, center, center);
-
     color: $main-text-color;
     font-size: 12px;
     line-height: calc(14px / 12px);
   }
-
-  @media screen and (min-width: 1200px) {
+  @include mq('desktop') {
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -56,7 +54,7 @@
 }
 
 .out-nav__link.mail {
-  @media screen and (max-width: 767px) {
+  @include mq('tablet', max) {
     color: $main-text-color;
     font-size: 24px;
     line-height: calc(28px / 24px);
@@ -64,10 +62,10 @@
 }
 
 .out-nav__icon {
-  @media screen and (max-width: 767px) {
+  @include mq('tablet', max) {
     display: none;
   }
-  @media screen and (min-width: 768px) {
+  @include mq('tablet') {
     margin-right: 10px;
     fill: currentColor;
     &--mail {
@@ -79,7 +77,7 @@
       height: 14px;
     }
   }
-  @media screen and (min-width: 1200px) {
+  @include mq('desktop') {
     &--mail {
       width: 16px;
       height: 12px;
