--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -52,3 +52,66 @@
     @include link-shadow();
   }
 }
+
+$breakpoints: (
+  'phone': 480px,
+  'tablet': 768px,
+  'desktop': 1200px,
+);
+
+@mixin mq($width, $type: min) {
+  @if map_has_key($breakpoints, $width) {
+    $width: map_get($breakpoints, $width);
+    @if $type == max {
+      $width: $width - 1px;
+    }
+    @if $type == minmax {
+      $width: $width - 1px;
+    }
+    @media only screen and (#{$type}-width: $width) {
+      @content;
+    }
+  }
+}
+
+// @mixin mq($type) {
+//   $phone: 480px;
+//   $tablet: 768px;
+//   $desktop: 1200px;
+
+//   @if $type == 'extr-sm' {
+//     @media only screen and (min-width: $phone) {
+//       @content;
+//     }
+//   }
+//   @if $type == 'sm' {
+//     @media only screen and (min-width: $phone) {
+//       @content;
+//     }
+//   }
+//   @if $type == 'only-sm' {
+//     @media only screen and (min-width: $phone) and (max-width: #{$tablet - 0.02} ) {
+//       @content;
+//     }
+//   }
+//   @if $type == 'md' {
+//     @media only screen and (min-width: $tablet) {
+//       @content;
+//     }
+//   }
+//   @if $type == 'only-md' {
+//     @media only screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02}) {
+//       @content;
+//     }
+//   }
+//   @if $type == 'lg' {
+//     @media only screen and (min-width: $desktop) {
+//       @content;
+//     }
+//   }
+//   @if $type == 'not-lg' {
+//     @media only screen and (max-width:#{$desktop - 0.02}) {
+//       @content;
+//     }
+//   }
+// }
