--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -82,10 +82,12 @@
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  word-wrap: break-word;
 }
 
 .works-list__subtitle {
   color: $main-text-color;
   font-size: 16px;
   line-height: 1.87;
+  word-wrap: break-word;
 }
