--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -4,9 +4,9 @@
   margin-top: 12px;
   margin-left: auto;
   margin-right: auto;
-  @media screen and (min-width: 480px) {
-    max-width: 370px;
-  }
+  // @media screen and (min-width: 480px) {
+  //   max-width: 370px;
+  // }
   @media screen and (min-width: 768px) {
     max-width: 448px;
   }
